profile picture update

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </p>
                 <div id="aboutDetails">
                     <div id="personalPicture">
-                        <img src="./assets/img/personalDP2.jpg" alt="Personal Profile Picture" id="aboutProfilePic">
+                        <img src="./assets/img/personaldp.jpg" alt="Personal Profile Picture" id="aboutProfilePic">
                     </div>
                     <div id="aboutDetailSection">
                         <h2>Personal Details</h2>
